# mktplace

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_schemas.py  002_create_dimensions.py  003_create_facts_and_audit.py  004_create_product_tables.py  005_create_fact_marketplace_region_daily.py
apps/api/app/: config.py  database.py  main.py  metabase_client.py
apps/api/app/routers/: performance.py  regioes.py
apps/api/app/schemas/: executive_summary.py  performance.py  regioes.py
apps/api/app/services/: executive_summary_service.py  gold_service.py  metabase_service.py  performance_service.py  regioes_service.py
apps/api/etl/: load_shopee_products.py
apps/api/etl/tests/: test_load_shopee_products_aggregate.py  test_load_shopee_products_completeness.py  test_load_shopee_products_dates.py  test_load_shopee_products_local_pg_guard.py  test_load_shopee_products_numeric.py
apps/api/tests/: test_canais_channel_rows.py  test_executive_summary_service.py  test_global_filters.py  test_marketplace_param.py  test_ml_brand_scope.py  test_pareto_bucket_rule.py  test_pareto_integration.py  test_performance_service_produtos.py  test_produtos_determinism.py  test_produtos_router_validation.py  test_produtos_sort.py  test_regioes_router.py  test_regioes_service.py  test_shopee_sku_consolidation.py
docs/: DECISIONS.md  analise_reconciliacao_xlsx_torre_jan_maio_2026.md  architecture.md  backlog.md  data_contracts.md  data_profiling_tiktok_ml.md  (+12 more)
(+237 files in other folders)
